update for BST 2022

--- a/index.html
+++ b/index.html
@@ -34,87 +34,79 @@
             <tbody>
                 <tr>
                     <th scope="row">Monday</th>
+                    <td class="bg-overnight"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
                     <td class="subdivided">
                         <div class="container-fluid">
                             <div class="row g-0">
-                                <div class="col-6 bg-offline">&nbsp;<br>&nbsp;</div>
-                                <!-- Judge lest not ye be judged... -->
-                                <div class="col-6 bg-overnight">&nbsp;<br>&nbsp;</div>
+                                <div class="col-8 bg-peak">&nbsp;<br>&nbsp;</div>
+                                <div class="col-4 bg-offline">&nbsp;<br>&nbsp;</div>
                             </div>
                         </div>
                     </td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-peak"></td>
                     <td class="bg-overnight"></td>
                     <td class="bg-overnight"></td>
                 </tr>
                 <tr>
                     <th scope="row">Tuesday</th>
+                    <td class="bg-overnight"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
                     <td class="subdivided">
                         <div class="container-fluid">
                             <div class="row g-0">
-                                <div class="col-6 bg-offline">&nbsp;<br>&nbsp;</div>
-                                <div class="col-6 bg-overnight">&nbsp;<br>&nbsp;</div>
+                                <div class="col-8 bg-peak">&nbsp;<br>&nbsp;</div>
+                                <div class="col-4 bg-offline">&nbsp;<br>&nbsp;</div>
                             </div>
                         </div>
                     </td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-peak"></td>
                     <td class="bg-overnight"></td>
                     <td class="bg-overnight"></td>
                 </tr>
                 <tr>
                     <th scope="row">Wednesday</th>
+                    <td class="bg-overnight"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
                     <td class="subdivided">
                         <div class="container-fluid">
                             <div class="row g-0">
-                                <div class="col-6 bg-offline">&nbsp;<br>&nbsp;</div>
-                                <div class="col-6 bg-overnight">&nbsp;<br>&nbsp;</div>
+                                <div class="col-8 bg-peak">&nbsp;<br>&nbsp;</div>
+                                <div class="col-4 bg-offline">&nbsp;<br>&nbsp;</div>
                             </div>
                         </div>
                     </td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-peak"></td>
                     <td class="bg-overnight"></td>
                     <td class="bg-overnight"></td>
                 </tr>
                 <tr>
                     <th scope="row">Thursday</th>
+                    <td class="bg-overnight"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
+                    <td class="bg-standard"></td>
                     <td class="subdivided">
                         <div class="container-fluid">
                             <div class="row g-0">
-                                <div class="col-8 bg-offline">&nbsp;<br>&nbsp;</div>
-                                <div class="col-4 bg-overnight">&nbsp;<br>&nbsp;</div>
+                                <div class="col-8 bg-peak">&nbsp;<br>&nbsp;</div>
+                                <div class="col-4 bg-offline">&nbsp;<br>&nbsp;</div>
                             </div>
                         </div>
                     </td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-standard"></td>
-                    <td class="bg-peak"></td>
                     <td class="bg-overnight"></td>
                     <td class="bg-overnight"></td>
                 </tr>
                 <tr>
                     <th scope="row">Friday</th>
-                    <td class="subdivided">
-                        <div class="container-fluid">
-                            <div class="row g-0">
-                                <div class="col-8 bg-offline">&nbsp;<br>&nbsp;</div>
-                                <div class="col-4 bg-overnight">&nbsp;<br>&nbsp;</div>
-                            </div>
-                        </div>
-                    </td>
+                    <td class="bg-overnight"></td>
                     <td class="bg-standard"></td>
                     <td class="bg-standard"></td>
                     <td class="bg-standard"></td>
